Import only shell 15

--- a/src/IssueViz.Security.UnitTests/IssueViz.Security.UnitTests.csproj
+++ b/src/IssueViz.Security.UnitTests/IssueViz.Security.UnitTests.csproj
@@ -1,8 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <IsTestProject>true</IsTestProject>
+    <RequiresVersionSpecificShell>true</RequiresVersionSpecificShell>
   </PropertyGroup>
+
+  <Import Project="..\SonarLint.VSSpecificAssemblies.props" />
 
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
@@ -25,7 +28,6 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
-
     <PackageReference Include="Moq" Version="4.14.5" />
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
   </ItemGroup>
