--- a/src/IssueViz.UnitTests/IssueViz.UnitTests.csproj
+++ b/src/IssueViz.UnitTests/IssueViz.UnitTests.csproj
@@ -10,6 +10,7 @@
     <ProjectGuid>{B25B73F0-13DF-4B90-918A-1F0A7A3753FE}</ProjectGuid>
     <RootNamespace>SonarLint.VisualStudio.IssueVisualization.UnitTests</RootNamespace>
     <AssemblyName>SonarLint.VisualStudio.IssueVisualization.UnitTests</AssemblyName>
+    <LangVersion>latest</LangVersion>
 
   </PropertyGroup>
 
