--- a/src/IssueViz.Security/IssueViz.Security.csproj
+++ b/src/IssueViz.Security/IssueViz.Security.csproj
@@ -47,6 +47,8 @@
     <PackageReference Include="Microsoft.Owin.Host.HttpListener" Version="4.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.ComponentModelHost" Version="14.0.25424" />
     <PackageReference Include="Microsoft.VisualStudio.Language.Intellisense" Version="14.0.23205" />
+    <PackageReference Include="Microsoft.VisualStudio.SDK.EmbedInteropTypes" Version="15.0.34" />
+    <PackageReference Include="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" Version="14.3.25407" />
   </ItemGroup>
 
   <ItemGroup Label="Project references">
