--- a/src/IssueViz.Security/IssueViz.Security.csproj
+++ b/src/IssueViz.Security/IssueViz.Security.csproj
@@ -58,6 +58,11 @@
 
   <ItemGroup>
     <None Remove="HotspotsList\HotspotsControl.xaml" />
+    <None Remove="HotspotsList\HotspotsControl2.xaml" />
+    <Page Include="HotspotsList2\HotspotsControl2.xaml">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <Generator>XamlIntelliSenseFileGenerator</Generator>
+    </Page>
     
     <Page Include="HotspotsList\HotspotsControl.xaml">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
